--- a/scss/cssclasses/_columns.scss
+++ b/scss/cssclasses/_columns.scss
@@ -1,27 +1,15 @@
 @forward '../shared/markdown-container';
 
-.columns-2.markdown-preview-view .markdown-preview-section {
-    column-count: 2;
-}
-
-.columns-3.markdown-preview-view .markdown-preview-section {
-    column-count: 3;
-}
-
-.columns-4.markdown-preview-view .markdown-preview-section {
-    column-count: 4;
-}
+.columns-2.markdown-preview-view .markdown-preview-section { column-count: 2; }
+.columns-3.markdown-preview-view .markdown-preview-section { column-count: 3; }
+.columns-4.markdown-preview-view .markdown-preview-section { column-count: 4; }
 
 @container markdown-view (width < 900px) {
-    .columns-4.markdown-preview-view .markdown-preview-section {
-        column-count: 3;
-    }
+    .columns-4.markdown-preview-view .markdown-preview-section { column-count: 3; }
 }
 
 @container markdown-view (width < 600px) {
-    :is(.columns-3, .columns-4).markdown-preview-view .markdown-preview-section {
-        column-count: 2;
-    }
+    :is(.columns-3, .columns-4).markdown-preview-view .markdown-preview-section { column-count: 2; }
 }
 
 :is(.columns-2, .columns-3, .columns-4).markdown-preview-view .markdown-preview-section {
@@ -29,11 +17,32 @@
     column-gap: 50px;
 }
 
-:is(.columns-2, .columns-3, .columns-4).markdown-preview-view .markdown-preview-section .markdown-preview-pusher,
-:is(.columns-2, .columns-3, .columns-4).markdown-preview-view .markdown-preview-section .mod-header,
-:is(.columns-2, .columns-3, .columns-4).markdown-preview-view .markdown-preview-section div:has(.frontmatter), // TODO: replace with .mod-frontmatter on 1.7.3 release
-:is(.columns-2, .columns-3, .columns-4).markdown-preview-view .markdown-preview-section :is(h1),
-:is(.columns-2, .columns-3, .columns-4).markdown-preview-view .markdown-preview-section [alt~="span"] {
+
+@media print {
+    .print .columns-2.markdown-preview-view { column-count: 2; }
+    .print .columns-3.markdown-preview-view { column-count: 3; }
+    .print .columns-4.markdown-preview-view { column-count: 4; }
+
+    @container markdown-view (width < 900px) {
+        .print .columns-4.markdown-preview-view { column-count: 3; }
+    }
+
+    @container markdown-view (width < 600px) {
+        .print :is(.columns-3, .columns-4).markdown-preview-view { column-count: 2; }
+    }
+
+    .print :is(.columns-2, .columns-3, .columns-4).markdown-preview-view {
+        column-rule: 1px solid var(--color-base-50);
+        column-gap: 50px;
+    }
+}
+
+
+:is(.columns-2, .columns-3, .columns-4).markdown-preview-view .markdown-preview-pusher,
+:is(.columns-2, .columns-3, .columns-4).markdown-preview-view .mod-header,
+:is(.columns-2, .columns-3, .columns-4).markdown-preview-view div:has(.frontmatter), // TODO: replace with .mod-frontmatter on 1.7.3 release
+:is(.columns-2, .columns-3, .columns-4).markdown-preview-view :is(h1),
+:is(.columns-2, .columns-3, .columns-4).markdown-preview-view [alt~="span"] {
     column-span: all;
 }
 
@@ -45,6 +54,9 @@
     display: block;
     width: fit-content;
     margin-inline: auto;
+}
+:is(.columns-2, .columns-3, .columns-4).markdown-preview-view [alt~="span"]:not(img) {
+    margin-block: var(--p-spacing);
 }
 
 :is(.columns-2, .columns-3, .columns-4).markdown-preview-view .list-bullet {
