--- a/publish.css
+++ b/publish.css
@@ -1459,6 +1459,32 @@ body {
     display: grid !important;
   }
 }
+@media print and (700px < width < 850px) {
+  .callout[data-callout=grid][data-callout-metadata~=col-6] > .callout-content {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+@media print and (550px < width < 700px) {
+  .callout[data-callout=grid][data-callout-metadata~=col-5] > .callout-content,
+  .callout[data-callout=grid][data-callout-metadata~=col-6] > .callout-content {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media print and (400px < width < 550px) {
+  .callout[data-callout=grid][data-callout-metadata~=col-4] > .callout-content,
+  .callout[data-callout=grid][data-callout-metadata~=col-5] > .callout-content,
+  .callout[data-callout=grid][data-callout-metadata~=col-6] > .callout-content {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media print and (width < 400px) {
+  .callout[data-callout=grid][data-callout-metadata~=col-3] > .callout-content,
+  .callout[data-callout=grid][data-callout-metadata~=col-4] > .callout-content,
+  .callout[data-callout=grid][data-callout-metadata~=col-5] > .callout-content,
+  .callout[data-callout=grid][data-callout-metadata~=col-6] > .callout-content {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 /*
     Inspired by ITS theme's infobox callouts from SlRvb (https://publish.obsidian.md/slrvb-docs/ITS+Theme/Callouts/Callout+-+Infoboxes)
 */
