--- a/snippets/cssclasses/columns.css
+++ b/snippets/cssclasses/columns.css
@@ -19,7 +19,7 @@ Author: ElsaTam (Kapirklaa in Discord)
   column-count: 4;
 }
 
-@container markdown-view (width < 900px) {
+@container markdown-view (600px < width < 900px) {
   .columns-4.markdown-preview-view .markdown-preview-section {
     column-count: 3;
   }
@@ -44,16 +44,18 @@ Author: ElsaTam (Kapirklaa in Discord)
   .print .columns-4.markdown-preview-view {
     column-count: 4;
   }
-  @container markdown-view (width < 900px) {
-    .print .columns-4.markdown-preview-view {
-      column-count: 3;
-    }
+}
+@media print and (600px < width < 900px) {
+  .print .columns-4.markdown-preview-view {
+    column-count: 3;
   }
-  @container markdown-view (width < 600px) {
-    .print :is(.columns-3, .columns-4).markdown-preview-view {
-      column-count: 2;
-    }
+}
+@media print and (width < 600px) {
+  .print :is(.columns-3, .columns-4).markdown-preview-view {
+    column-count: 2;
   }
+}
+@media print {
   .print :is(.columns-2, .columns-3, .columns-4).markdown-preview-view {
     column-rule: 1px solid var(--color-base-50);
     column-gap: 50px;
