--- a/snippets/editor/callouts/callout-grid.css
+++ b/snippets/editor/callouts/callout-grid.css
@@ -71,3 +71,29 @@ Author: ElsaTam (Kapirklaa in Discord)
     display: grid !important;
   }
 }
+@media print and (700px < width < 850px) {
+  .callout[data-callout=grid][data-callout-metadata~=col-6] > .callout-content {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+@media print and (550px < width < 700px) {
+  .callout[data-callout=grid][data-callout-metadata~=col-5] > .callout-content,
+  .callout[data-callout=grid][data-callout-metadata~=col-6] > .callout-content {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media print and (400px < width < 550px) {
+  .callout[data-callout=grid][data-callout-metadata~=col-4] > .callout-content,
+  .callout[data-callout=grid][data-callout-metadata~=col-5] > .callout-content,
+  .callout[data-callout=grid][data-callout-metadata~=col-6] > .callout-content {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media print and (width < 400px) {
+  .callout[data-callout=grid][data-callout-metadata~=col-3] > .callout-content,
+  .callout[data-callout=grid][data-callout-metadata~=col-4] > .callout-content,
+  .callout[data-callout=grid][data-callout-metadata~=col-5] > .callout-content,
+  .callout[data-callout=grid][data-callout-metadata~=col-6] > .callout-content {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
