--- a/scss/cssclasses/_confidential.scss
+++ b/scss/cssclasses/_confidential.scss
@@ -15,6 +15,13 @@
     }
 }
 
+@media print {
+    .confidential.markdown-rendered mark,
+    .confidential.cm-s-obsidian span.cm-highlight:not(.cm-formatting-highlight):not(.cm-formatting-highlight + .cm-highlight) {
+        color: transparent;
+    }
+}
+
 
 body {
     /* https://resourceboy.com/textures/redaction-textures/ */
