--- a/scss/editor/lists/_tree-view.scss
+++ b/scss/editor/lists/_tree-view.scss
@@ -100,3 +100,18 @@ ul:has(> li > .tag[href='#tree-view']) {
         animation: bg-slide 0.5s ease-in-out;
     }
 }
+
+@media print {
+    ul:has(> li > .tag[href="#tree-view"]),
+    ul:has(> li > .tag[href="#tree-view"]) ul {
+        list-style-type: none;
+    }
+
+    ul:has(> li > .tag[href="#tree-view"]) ul {
+        position: relative;
+    }
+
+    ul:has(> li > .tag[href="#tree-view"]) li::after {
+        width: var(--list-indent);
+    }
+}
